# osquery-rs-sdk

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  osquery.thrift
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: start-osqueryd.sh  stop-osqueryd.sh
.github/workflows/: ci.yml  release.yml
benches/: deserialization.rs  server_dispatch.rs
examples/: config.rs  distributed.rs  logger.rs  query.rs  table.rs  writable_table.rs
src/: client.rs  lib.rs  mock.rs  osquery.rs  transport.rs
src/client/: manager.rs  mod.rs  named_pipe.rs
src/plugin/: config.rs  distributed.rs  logger.rs  mod.rs  table.rs
src/server/: manager.rs  mod.rs  threaded.rs
src/server/mock/: mod.rs
tests/: e2e.rs
