[package]
name = "osquery-rs-sdk"
version = "0.1.0"
description = "Rust bindings for osquery."
readme = "README.md"
authors = ["realxen <86901550+realxen@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/realxen/osquery-rs-sdk"
homepage = "https://github.com/realxen/osquery-rs-sdk"
documentation = "https://docs.rs/osquery-rs-sdk"
keywords = ["osquery", "security", "extensions", "thrift"]
categories = ["api-bindings", "development-tools"]
edition = "2021"
rust-version = "1.71.0"
exclude = [
    ".devcontainer/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.17.0"
tokio = { version = "1.19", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = [
    "winbase",
    "winerror",
], optional = true }


[features]
default = ["server", "plugins"]
client = ["dep:winapi"]
server = ["client", "tokio/rt-multi-thread", "tokio/net", "tokio/io-util", "tokio/sync", "tokio/macros"]
plugins = ["server", "dep:serde_json", "dep:serde"]
tracing = ["dep:tracing"]
mock = ["client"]

[[example]]
name = "query"
crate-type = ["bin"]
required-features = ["client"]

[[example]]
name = "config"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "logger"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "table"
crate-type = ["bin"]
required-features = ["plugins"]

[[example]]
name = "distributed"
crate-type = ["bin"]
required-features = ["plugins"]

[dev-dependencies]
serial_test = "3"
